[CW2]
* Set the current release version in the app's manifest to be displayed in system settings.

[CW52]
+ Slider message: allow to specify dynamic footer.
+ ScrollableMessage dialog: the user can specify timeout.
+ Experimental: select protocol properties (protocol version, is media app, app name, desired language and HMI language) at app launch. The proxy service starts only when the app's activity launches.
* Clear the lists of button subscriptions, vehicle data subscriptions, created submenus, commands, choice sets, and put files when SYNC is disconnected.
* Don't allow to delete the top-level menu.
* Stop the whole process when clicking the Exit options menu item.
* Fix the crashes when sending SetGlobalProperties and ResetGlobalProperties commands.
* Fix the list of commands available for protocol v1.
* Fix: the user can set Alert command's ttsChunk parameter.
* Fix: don't show choiceSetId in the app until a successful response has come.

[R6.0.0]
SyncProxyTester:
+ When the v1 protocol is active, the user can only send a command supported by version 1.
+ Add the possibility to set the parameters of SetGlobalProperties and ResetGlobalProperties commands with GUI.
* Fix a rare crash when creating a command after resuming the app.
* Fix sending CreateChoiceSet command by adding image values.
+ The user can specify position when creating Slider request.
+ Adding EncodedSyncPData support to SyncProxyTester (Ford's).
+ After toggling protocol version, the app needs to be restarted by the user.
+ When clicking the Exit options menu item, the app closes the activity and also stops the proxy service.
+ The user can specify VR synonyms for choice set's commands with the help of additional text fields.
+ Add extra logs for requests.
+ Persist the log messages in the UI during one app launch.
* Fix: AddCommand dialog: correctly send the entered VR Synonym with the command.
+ Introduce changelog.