@@ -61,8 +61,24 @@
 		</CheckBox>
 
 	</LinearLayout>
-		<CheckBox android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:id="@+id/chkIncludeSBs"
-		    android:text="Include SoftButtons?" android:checked="false">
-		</CheckBox>
+
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
+
+	    <CheckBox
+	        android:id="@+id/chkIncludeSBs"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:checked="false"
+	        android:text="Include" />
+
+	    <Button
+	        android:id="@+id/alert_btnSoftButtons"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="Soft Buttons" />
+
+	</LinearLayout>
+
 </LinearLayout>
